fix: increase .status-visible font size  in Planets.css to 1.4rem to match .status-set

--- a/skyapp-frontend/src/Planets.css
+++ b/skyapp-frontend/src/Planets.css
@@ -35,6 +35,7 @@
   font-family: "Barlow Condensed";
   border: 1px solid green;
   opacity: 0.78;
+  font-size:1.4rem;
 }
 
 
